# localzero-monitoring

./: .dockerignore  .env  .env.local  .env.production  .env.testing  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  backup.sh  crontab  deploy.sh  docker-compose.override.yml  docker-compose.with-reverse-proxy.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  reload-cert.sh  renew-cert.sh  start-testing-with-prod-data.sh
.github/act-events/: deploy-to-testing.json
.github/workflows/: backup.yml  ci.yml  cleanupimages.yml  deploy.yml
.scripts/: makemigrations  migrate  runserver
config/: asgi.py  settings.py  wsgi.py
config/nginx/: htpasswd  nginx.conf
config/settings/: base.py  container.py  local-container.py  local.py  production-container.py  production.py
cpmonitor/: adapters.py  admin.py  apps.py  forms.py  models.py  rules.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
cpmonitor/fixtures/: complete_0006.json  example_fixture.json  permissions.json
cpmonitor/migrations/: 0001_initial.py  0002_alter_city_introduction_alter_task_description_and_more.py  0003_alter_city_options_alter_task_options_and_more.py  0004_city_slug.py  0004_city_slug_task_slugs.py  0005_alter_task_summary.py  0006_alter_task_city.py  0007_rename_to_execution_status_and_more.py  0008_alter_task_execution_status.py  0009_alter_task_slugs_task_unique_urls.py  0010_alter_task_slugs.py  0011_city_resolution_date_city_target_year.py  0012_chart.py  0012_newmodel.py  0013_alter_chart_options_alter_chart_city.py  0014_checklistclimateactionplan.py  0015_capchecklist_delete_checklistclimateactionplan.py  0015_checklistsustainabilityarchitectureinadministration.py  0016_alter_capchecklist_options_and_more.py  0017_administrationchecklist.py  0017_sustainabilityarchitecturechecklist.py  0018_city_draft_mode_task_draft_mode.py  0018_remove_capchecklist_cap_exists.py  0019_alter_city_introduction_alter_city_name_and_more.py  0020_alter_city_draft_mode_alter_task_draft_mode.py  0020_chart_internal_information_city_internal_information_and_more.py  0021_alter_chart_city_localgroup.py  0022_chart_internal_information_city_internal_information_and_more.py  0023_task_frontpage.py  0024_city_city_admins_city_city_editors.py  0024_task_responsible_organ_explanation_and_more.py  0025_alter_task_responsible_organ_and_more.py  0025_invitation.py  0026_administrationchecklist_climate_protection_management_exists_rationale_and_more.py  0026_administrationchecklist_climate_protection_management_rationale_and_more.py  0026_alter_task_options_alter_city_assessment_action_plan_and_more.py  0026_city_city_admins_city_city_editors.py  0027_invitation.py  0028_alter_task_options_alter_city_assessment_action_plan_and_more.py  0028_remove_administrationchecklist_climate_protection_reports_are_continuously_published_and_more.py  (+29 more)
cpmonitor/templates/: administration_checklist.html  base.html  cap_checklist.html  circle-checked-filled.html  circle-x-filled.html  city-base.html  city.html  datenschutz.html  energy_plan_checklist.html  group.html  impressum.html  index.html  jetzt-spenden.html  local-group.html  pageframe.html  project.html  sustainability_architecture_checklist.html  task.html  taskgroup.html  ueber-uns.html
e2e_tests/: conftest.py  example_e2e_test.py  test_admin.py  test_administration_checklist_page.py  test_cap_checklist_page.py  test_city_page.py  test_deployed.py  test_energy_plan_checklist_page.py  test_front_page.py  test_task_page.py
frontend/: .gitignore  .prettierrc.js  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx  (+8 more)
ssl_certificates_localhost/: fullchain.cer  ssl-cert.key
(+164 files in other folders)
