[tool.poetry]
name = "cpmonitor"
version = "0.1.0"
description = "A website to maintain the progress of a municipality towards net zero."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "cpmonitor" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
gunicorn = "^20.1.0"
django-treebeard = "^4.6.1"
martor = "^1.6.19"
pillow = "^9.5.0"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["cpmonitor"]
pythonVersion = "3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.4"
pyright = "^1.1.292"
pytest = "^7.2.1"
pytest-env = "^0.8.1"
pytest-playwright = "^0.3.0"
pytest-base-url = "^2.0.0"
pytest-django = "^4.5.2"
djlint = "^1.30.2"
django-test-migrations = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
base_url = "https://localhost"
env = [
    "DJANGO_SETTINGS_MODULE=config.settings.container",
    "DJANGO_SECRET_KEY=somePlaceholder",
    "DJANGO_CSRF_TRUSTED_ORIGINS=https://localhost",
    "DJANGO_DEBUG=True",
    "DJANGO_ALLOW_ASYNC_UNSAFE=True",
]

[tool.djlint]
ignore = "H017,H031"
indent = 2
quiet = true
