[tool.poetry]
name = "cpmonitor"
version = "0.1.0"
description = "A website to maintain the progress of a municipality towards net zero."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "cpmonitor" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
gunicorn = "^21.2.0"
django-treebeard = "^4.6.1"
martor = "1.6.26"
pillow = "^10.1.0"
rules = "^3.3"
django-invitations = "^2.0.0"
django-allauth = "^0.58.2"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["cpmonitor"]
pythonVersion = "3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.4"
pyright = "^1.1.292"
pytest = "^7.2.1"
pytest-env = "^1.1.1"
pytest-playwright = "^0.4.3"
pytest-base-url = "^2.0.0"
pytest-django = "^4.5.2"
djlint = "^1.30.2"
django-test-migrations = "^1.2.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "e2e_tests/customer_frontend frontend"
env = [
    "DJANGO_SETTINGS_MODULE=config.settings.container",
    "DJANGO_SECRET_KEY=somePlaceholder",
    "DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost",
    "DJANGO_DEBUG=True",
    "DJANGO_ALLOW_ASYNC_UNSAFE=True",
]

[tool.djlint]
ignore = "H017,H031"
indent = 2
quiet = true
